APPS-1800 Hide overflow to fix menu showing outside the frame

--- a/web/src/main/resources/org/geogebra/web/resources/html/app-style.css
+++ b/web/src/main/resources/org/geogebra/web/resources/html/app-style.css
@@ -34,6 +34,7 @@
     background-color: #fff;
     color: rgba(0,0,0,.87);
     font-size: 16px;
+    overflow: hidden;
 }
  .GeoGebraFrame .toolbar .header-open-landscape{
 	height: 56px;
